crates/service/tests/document_highlight/snapshots/features__document_highlight__keyword.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 3
      },
      "end": {
        "line": 2,
        "character": 7
      }
    },
    "kind": 1
  },
  {
    "range": {
      "start": {
        "line": 3,
        "character": 3
      },
      "end": {
        "line": 3,
        "character": 7
      }
    },
    "kind": 1
  }
]
