crates/service/tests/document_highlight/snapshots/features__document_highlight__local_ref_int.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 18
      },
      "end": {
        "line": 2,
        "character": 20
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 2,
        "character": 37
      },
      "end": {
        "line": 2,
        "character": 38
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 2,
        "character": 51
      },
      "end": {
        "line": 2,
        "character": 53
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 2,
        "character": 66
      },
      "end": {
        "line": 2,
        "character": 67
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 2,
        "character": 80
      },
      "end": {
        "line": 2,
        "character": 82
      }
    },
    "kind": 3
  }
]
