crates/service/tests/document_highlight/snapshots/features__document_highlight__param_ref_via_type_def.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 25
      },
      "end": {
        "line": 2,
        "character": 28
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 4,
        "character": 15
      },
      "end": {
        "line": 4,
        "character": 16
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 5,
        "character": 15
      },
      "end": {
        "line": 5,
        "character": 16
      }
    },
    "kind": 2
  }
]
