crates/service/tests/document_highlight/snapshots/features__document_highlight__ref_type.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 24
      },
      "end": {
        "line": 2,
        "character": 31
      }
    },
    "kind": 1
  },
  {
    "range": {
      "start": {
        "line": 3,
        "character": 24
      },
      "end": {
        "line": 3,
        "character": 31
      }
    },
    "kind": 1
  }
]
